# django-demo-project

./: pyproject.toml
devsearch/: settings.py  urls.py
